...
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="nQG-sZ-rE1"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Wdc-8U-OyK"/>
                                </connections>
                            </tableView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="NameComment" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0UT-l4-2sZ">
                                <rect key="frame" x="60" y="517" width="255" height="25"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U70-4s-me3">
                                <rect key="frame" x="203" y="584" width="112" height="29"/>
                                <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="112" id="SJs-u6-chI"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <state key="normal" title="Unload">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
                                <connections>
                                    <action selector="receiveButtonInsert:" destination="BYZ-38-t0r" eventType="touchUpInside" id="H19-iW-3Eq"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="60" y="584" width="112" height="29"/>
                                <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="112" id="5c4-ws-j7L"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <state key="normal" title="Send">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
                                <connections>
                                    <action selector="sendButtonInsert:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UQQ-S7-lE6"/>
                                </connections>
                            </button>
...
